--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@types/node": "^16.18.70",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
+    "hangul-romanization": "^1.0.1",
+    "less": "^4.2.0",
+    "less-loader": "^12.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
