--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "browserslist": "^4.18.1",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "cors": "^2.8.5",
     "css-minimizer-webpack-plugin": "^3.2.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.1.1",
+    "express": "^4.18.2",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
     "hangul-romanization": "^1.0.1",
@@ -153,6 +155,7 @@
   },
   "devDependencies": {
     "css-loader": "^6.9.0",
+    "node-sass": "^9.0.0",
     "sass": "^1.69.7",
     "sass-loader": "^14.0.0",
     "style-loader": "^3.3.4"
