--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "name": "learn-korean",
+  "homepage": "https://learnkorean.tuinstra.family",
+  "description": "Learn Korean",
+  "author": {
+    "name": "Tiemen Reinder Tuinstra",
+    "email": "tiemen@tuinstra.family"
+  },
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.4",
-    "@mui/material": "^5.15.4",
+    "@mui/material": "^5.15.5",
     "@mui/styled-engine-sc": "^6.0.0-alpha.12",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
@@ -60,6 +66,7 @@
     "react-icons": "^5.0.1",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.21.2",
+    "react-swipeable": "^7.0.1",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "semver": "^7.3.5",
