--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.70",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@vitalets/google-translate-api": "^9.2.0",
+    "axios": "^1.6.7",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
@@ -45,6 +45,7 @@
     "express": "^4.18.2",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
+    "hangul-js": "^0.2.6",
     "hangul-romanization": "^1.0.1",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
@@ -165,6 +166,7 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^20.11.10",
     "css-loader": "^6.9.0",
     "node-sass": "^9.0.0",
     "sass": "^1.69.7",
